[package]
name = "turbulence"
version = "0.1.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
license = "MIT OR CC-0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.1.4"
byteorder = "1.3.2"
crossbeam = "0.7"
futures = "0.3"
log = "0.4"
num-traits = "0.2"
serde = "1.0"
snap = "1.0"
thiserror = "1.0"

[dev-dependencies]
rand = { version = "0.7", features = ["small_rng"] }
futures = { version = "0.3.0", features = ["async-await", "thread-pool"] }