[package]
name = "turbulence"
version = "0.1.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
license = "MIT OR CC-0"

[dependencies]
bincode = "1.1"
byteorder = "1.3"
futures = "0.3"
serde = "1.0"
snap = "1.0"
thiserror = "1.0"

[dev-dependencies]
rand = { version = "0.7", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
