[package]
name = "turbulence"
version = "0.3.1-alpha.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
description = "Tools to provide serialization, multiplexing, optional reliability, and optional compression to a game's networking."
readme = "README.md"
repository = "https://github.com/kyren/turbulence"
documentation = "https://docs.rs/turbulence"
keywords = ["gamedev", "networking"]
license = "MIT OR Apache-2.0"

[badges]
circle-ci = { repository = "kyren/turbulence", branch = "master" }

[dependencies]
bincode = "1.3"
byteorder = "1.3"
futures = "0.3"
rustc-hash = "1.0"
serde = "1.0"
snap = "1.0"
thiserror = "1.0"

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
