[package]
name = "turbulence-example"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "comn"
path = "./src/comn.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[[bin]]
name = "server"
path = "./src/server.rs"

[dependencies]
turbulence = { path = "../" }
serde = { version = "1.0.117", features = [ "derive" ] }
smol = "1.2.4"
futures = "0.3.7"
